--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,1 @@
-FROM ubuntu:22.04
-
-RUN apt update && apt upgrade -y
-RUN apt install -y build-essential ninja-build cmake git meson \
-                   python3 python3-pip python3-setuptools python3-wheel python3-venv
+FROM alpine
