--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,18 +1,18 @@
 {
 	"name": "Meson",
-	"runArgs": ["--init"],
+	//"runArgs": ["--init"],
 	"build": {
 		"dockerfile": "Dockerfile"
-	},
+	}
 
-	// Add the IDs of extensions you want installed when the container is created.
-    "customizations": {
-        "vscode": {
-            "extensions": [
-            // "ms-azuretools.vscode-bicep"
-            ]
-        }
-    },
+	// // Add the IDs of extensions you want installed when the container is created.
+    // "customizations": {
+    //     "vscode": {
+    //         "extensions": [
+    //         // "ms-azuretools.vscode-bicep"
+    //         ]
+    //     }
+    // },
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
@@ -22,7 +22,7 @@
 
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	//"remoteUser": "vscode",
-	"features": {
-		"github-cli": "latest"
-	}
+	//"features": {
+	//	"github-cli": "latest"
+	//}
 }
