Added meson build system (and VSCode infra)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
     "files.exclude" : {
-        "*.out" : true
+        "*.out" : true,
+        "build/" : true
     },
     "search.exclude" : {
-        "*.out" : true
+        "*.out" : true,
+        "build/" : true
     }
 }
