Testing messages from meson

--- a/meson.build
+++ b/meson.build
@@ -1,2 +1,5 @@
 project('trymeson', 'c')
+
+cc = meson.get_compiler('c')
+message('***** Trying a message from meson')
 executable('main', 'main.c')
