Add a library (not yet a dependency)

--- a/meson.build
+++ b/meson.build
@@ -20,4 +20,7 @@ configure_file(
   configuration: config_h,
 )
 
+subdir('lib')
+
+# executable('main', 'main.c', dependencies : dependency('my_lib'))
 executable('main', 'main.c')
