--- a/lib/meson.build
+++ b/lib/meson.build
@@ -1,2 +1,8 @@
+include_dir = include_directories('.')
 lib_src = ['foo.c']
-library('my_lib', lib_src)
+lib = library('my_lib', lib_src)
+
+lib_dep = declare_dependency(
+    include_directories : include_dir,
+    link_with: lib
+)
